# bctop

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: publish.yml
src/: lib.rs  main.rs
src/app/: actions.rs  mod.rs  state.rs  ui.rs
src/app/container_management/: docker.rs  mod.rs
src/container_management/: docker.rs  mod.rs
src/inputs/: events.rs  key.rs
src/io/: handler.rs  mod.rs
