[package]
name = "bctop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version="0.19", features=["crossterm"] }
crossterm = "0.25"
futures = "0.3"
tokio = {version="1.21", features=["rt-multi-thread", "macros"]}
eyre = "0.6"
chrono = "0.4"
bollard = "0.13"

log4rs = "1.2"
log = "0.4"
