[package]
name = "bctop"
version = "0.2.2"
edition = "2021"
authors = ["Jan Fontanet Castillo"]
description = "A simple tool to monitor containers and their resources"
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version="0.19", features=["crossterm"] }
crossterm = "0.25"
futures = "0.3"
tokio = {version="1.21", features=["rt-multi-thread", "macros"]}
eyre = "0.6"
chrono = "0.4"
bollard = "0.13"
reqwest= {version="0.11", default-features = false, features=["json", "rustls-tls"]}
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"

log4rs = "1.2"
log = "0.4"

[package.metadata.deb]
copyright = "2022"
license-file = "LICENSE"
